# vla-research

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-25-github-ready-vla-research.md
docs/superpowers/specs/: 2026-06-25-github-ready-vla-research-design.md
research-memory-template/matrices/: metrics-schema.md
research-memory-template/pdfs/: README.md
research-memory-template/state/: research-state.md
research-memory-template/taxonomy/: hardware-mapping.md  vla-acceleration-taxonomy.md
scripts/: initialize-memory.ps1  install.ps1  uninstall.ps1  validate.ps1
skill/vla-research/: SKILL.md
skill/vla-research/agents/: openai.yaml
skill/vla-research/references/: academic-research-integration.md  memory-contract.md
skill/vla-research/scripts/: vla_memory_cli.py
src/vla_research/: __init__.py  cli.py  memory.py  server.py
tests/: test_cli.py  test_install_scripts.py  test_mcp_server.py  test_memory_template.py  test_privacy_boundary.py  test_research_memory.py  test_skill_package.py  test_validation_script.py
