[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-research"
version = "0.1.0"
description = "Local VLA hardware/software co-design research memory and MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = []

[project.scripts]
vla-research = "vla_research.cli:main"
vla-research-mcp = "vla_research.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
